# ghcjs-famous

./: LICENSE  README.md  ghcjs-famous.cabal
html/: famous-test.html  main.js
src/: Main.hs
src/JavaScript/: Famous.hs
src/JavaScript/Famous/: Common.hs  Examples.hs  Generic.hs  Highlevel.hs  Internal.hs  Modifier.hs  Surface.hs  Transform.hs  Types.hs
